small fix of code response
